# mcp-server-boilerplate

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: CLIENT_INTEGRATION.md  MCP_Server_Boilerplate.pptx  SYSTEM_DESIGN.md  TEMPLATE_ARCHITECTURE.html
template/: .env.example  Dockerfile  config.py  dev.py  docker-compose.yml  main.py  pyproject.toml
template/src/: auth_context.py  server.py
template/src/http/: app.py  mcp_mount.py  oauth_proxy.py  well_known.py
template/src/http/middleware/: api_key.py  auth.py  jwt.py  stream_guard.py
template/tests/: test_public_endpoints.py  test_tools.py
